--- a/index.html
+++ b/index.html
@@ -23,15 +23,11 @@
         <a href="#">About Me</a>
       </ul>
     </nav>
-    <div class="homebody">
-      <p class = "Homelogo">logo</p>
-      <main>
-        <ul class="homenav">
-          <li>Experience</li>
-          <li>Portfolio</li>
-          <li>About Me</li>
-        </ul>
-      </main>
+    <div class="homeBody">
+        <p class = "homeLogo">logo</p>
+        <div id="firstNav">Experience</div>
+        <div id="secondNav">Portfolio</div>
+        <div id="thirdNav">About Me</div>
     </div>
     <span class="menuBtn" onclick="openNav()">open</span>
   </body>
