I added some animations, tidied text sizes, and fixed button padding

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       </ul>
     </nav>
     <div class="homeBody">
-        <p class = "homeLogo">logo</p>
-        <div id="firstNav">Experience</div>
-        <div id="secondNav">Portfolio</div>
-        <div id="thirdNav">About Me</div>
+        <div class = "homeLogo"><p>Victoria</p><p>McCrady</p></div>
+        <a href="#"class="homeBody--link" id="firstNav">Experience</a>
+        <a href="#"class="homeBody--link" id="secondNav">Portfolio</a>
+        <a href="#"class="homeBody--link" id="thirdNav">About Me</a>
+        <div class="homeBody--link" id="navButton"><button class="menuBtn" onclick="openNav()">open</button></div>
     </div>
-    <span class="menuBtn" onclick="openNav()">open</span>
   </body>
 </html>
