--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul>
     </nav>
     <div class="homeBody">
-        <div class = "homeLogo"><h1>Victoria</h1><h1>McCrady</h1></div>
+        <div class = "homeLogo cute-box"><h1>Victoria</h1><h1>McCrady</h1></div>
         <a href="#"class="homeBody--link" id="firstNav">Experience</a>
         <a href="#"class="homeBody--link" id="secondNav">Portfolio</a>
         <a href="#"class="homeBody--link" id="thirdNav">About Me</a>
