media styled home and exp.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     </nav>
     <div class="homeBody">
         <div class = "homeLogo cute-box"><h1>Victoria</h1><h1>McCrady</h1></div>
-        <a href="#"class="homeBody--link" id="firstNav">Experience</a>
-        <a href="#"class="homeBody--link" id="secondNav">Portfolio</a>
-        <a href="#"class="homeBody--link" id="thirdNav">About Me</a>
-        <div class="homeBody--link" id="navButton"><button class="menuBtn" onclick="openNav()">open</button></div>
+          <a href="#"class="homeBody--link" id="firstNav">Experience</a>
+         
+          <a href="#"class="homeBody--link" id="secondNav">Portfolio</a>
+         
+          <a href="#"class="homeBody--link" id="thirdNav">About Me</a>
+        <div class="navButton--box"><button class="menuBtn cute-box" onclick="openNav()">open</button></div>
     </div>
   </body>
 </html>
