--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <nav class="overlay" id="mainNav">
       <a href="javascript:void(0)"  class="closebtn" onclick="closeNav()">&times;</a>
       <ul class="overlay--content">
-        <a href="#">Home</a>
-        <a href="#">Experience</a>
+        <a href="../MultiversePortfolioSite/index.html">Home</a>
+        <a href="../MultiversePortfolioSite/Experience/Exp.html">Experience</a>
         <a href="#">Portfolio</a>
-        <a href="#">About Me</a>
+        <a href="../MultiversePortfolioSite/Bio/Bio.html">About Me</a>
       </ul>
     </nav>
     <div class="homeBody">
         <div class = "homeLogo cute-box"><h1>Victoria</h1><h1>McCrady</h1></div>
-          <a href="#"class="homeBody--link" id="firstNav">Experience</a>
+          <a href="../MultiversePortfolioSite/Experience/Exp.html"class="homeBody--link" id="firstNav">Experience</a>
          
           <a href="#"class="homeBody--link" id="secondNav">Portfolio</a>
          
-          <a href="#"class="homeBody--link" id="thirdNav">About Me</a>
+          <a href="../MultiversePortfolioSite/Bio/Bio.html"class="homeBody--link" id="thirdNav">About Me</a>
         <div class="navButton--box"><button class="menuBtn cute-box" onclick="openNav()">open</button></div>
     </div>
   </body>
